# time_chart_tool

./: .gitignore  FIX_SUMMARY.md  MANIFEST.in  MATMUL_ANALYSIS_FEATURE.md  README.md  RENAME_SUMMARY.md  SUMMARY.md  __init__.py  advanced_analyzer.py  advanced_demo.py  analysis_demo.sh  analyze_performance_comparison.py  analyzer.py  call_stack_demo.py  cli.py  comm_demo.sh  compare_demo.sh  debug_external_id.py  demo.py  demo_matmul_analysis.py  example.py  example_matmul_analysis.py  example_usage.py  organize_profiler_folders.py  parser.py  prims_downloader.py  pyproject.toml  requirements.txt  setup.py  test_advanced_analyzer.py  test_analyzer.py  test_call_stack_demo.py  test_csv_output.py  test_fix_comparison.py  test_specific_id.py  usage_example.py
data/: gen_simpile_mlu_profiler_json.py
data/executor_trainer-runner_6_0_20251203_140933/: mlu_profiler_trace_rank_0_0_0.json  mlu_profiler_trace_rank_0_1_0.json  mlu_profiler_trace_rank_0_2_0.json  mlu_profiler_trace_rank_0_3_0.json  mlu_profiler_trace_rank_0_4_0.json  mlu_profiler_trace_rank_0_5_0.json  mlu_profiler_trace_rank_0_6_0.json  mlu_profiler_trace_rank_0_7_0.json
src/time_chart_tool.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_aggregator.py  test_aggregator_list.py  test_analyzer.py  test_call_stack_analysis.py  test_call_stack_builder.py  test_comparator.py  test_comparator_list.py  test_comparator_skip.py  test_cpu_op_performance_summary.py  test_enhanced_search.py  test_matmul_analysis.py  test_parser.py  test_postprocessor.py  test_real_id.py  test_single_file_fix.py  test_specific_id.py
(+61 files in other folders)
