[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time_chart_tool"
version = "1.0.6"
description = "PyTorch Profiler 高级分析工具"
authors = [
    {name = "Time Chart Tool Team"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
time-chart-tool = "time_chart_tool.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
